--- a/package.json
+++ b/package.json
@@ -5,17 +5,29 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./app.js",
-    "dev": "nodemon ./app.js"
+    "dev": "nodemon ./app.js",
+    "test": "cross-env ENV=test mocha ./__tests__/*",
+    "pretest": "cross-env NODE_ENV=test npm run db:reset",
+    "db:reset": "npx sequelize-cli db:drop && npx sequelize-cli db:create && npx sequelize-cli db:migrate",
+    "db:create:test": "cross-env NODE_ENV=test npx sequelize-cli db:create"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1",
-    "nodemon": "^2.0.19",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
+    "chai": "^4.3.6",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.0.2",
+    "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
+    "mocha": "^10.0.0",
+    "nodemon": "^2.0.19",
     "pg": "^8.8.0",
-    "sequelize": "^6.23.0"
+    "sequelize": "^6.23.0",
+    "sequelize-cli": "^6.4.1",
+    "supertest": "^6.2.4"
   }
 }
