--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 SECRET=probando
 DB_DEV_USER=sefhiroth
-DB_DEV_PASSWORD=probando
+DB_DEV_PASSWORD=Zp8oVzTa327L1RqnZY5XBP6zxLOdwurj
 DB_DEV_DB_NAME=larnudb
-DB_DEV_HOST= localhost
+DB_DEV_HOST=dpg-ccrkakirrk08u0m5egbg-a.oregon-postgres.render.com
+DB_LINK=postgres://sefhiroth:Zp8oVzTa327L1RqnZY5XBP6zxLOdwurj@dpg-ccrkakirrk08u0m5egbg-a.oregon-postgres.render.com/larnudb
 ENV=development
 
 
