se cambia conexion a postgres

--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ DB_DEV_PASSWORD=Zp8oVzTa327L1RqnZY5XBP6zxLOdwurj
 DB_DEV_DB_NAME=larnudb
 DB_DEV_HOST=dpg-ccrkakirrk08u0m5egbg-a.oregon-postgres.render.com
 DB_LINK=postgres://sefhiroth:Zp8oVzTa327L1RqnZY5XBP6zxLOdwurj@dpg-ccrkakirrk08u0m5egbg-a.oregon-postgres.render.com/larnudb
+DB_LINK_LOCAL=postgres://sefhiroth:Zp8oVzTa327L1RqnZY5XBP6zxLOdwurj@dpg-ccrkakirrk08u0m5egbg-a/larnudb
 ENV=development
 
 
