--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mocha": "^10.0.0",
     "nodemon": "^2.0.19",
     "pg": "^8.8.0",
+    "puppeteer": "^18.0.5",
     "sequelize": "^6.23.0",
     "sequelize-cli": "^6.4.1",
     "supertest": "^6.2.4"
