--- a/.docker/test/DockerFile
+++ b/.docker/test/DockerFile
@@ -1,6 +1,6 @@
 # Use the official lightweight Node.js 12 image.
 # https://hub.docker.com/_/node
-FROM node:17.9.1-slim
+FROM node:18
 
 # Create and change to the app directory.
 # mkdir & cd
