--- a/.env
+++ b/.env
@@ -7,6 +7,8 @@ DB_LINK=postgres://sefhiroth:Zp8oVzTa327L1RqnZY5XBP6zxLOdwurj@dpg-ccrkakirrk08u0
 DB_LINK_LOCAL=postgres://sefhiroth:Zp8oVzTa327L1RqnZY5XBP6zxLOdwurj@dpg-ccrkakirrk08u0m5egbg-a/larnudb
 ENV=development
 
-
-
-
+PGDATABASE=railway
+PGHOST=containers-us-west-88.railway.app
+PGPASSWORD=WZgzvPiIGXELdzAgVW0c
+PGPORT=7946
+PGUSER=postgres
