se agrega los puertos

--- a/.env
+++ b/.env
@@ -12,3 +12,8 @@ PGHOST=containers-us-west-88.railway.app
 PGPASSWORD=WZgzvPiIGXELdzAgVW0c
 PGPORT=7946
 PGUSER=postgres
+
+POSTGRES_USER=sefhiroth
+POSTGRES_PASSWORD=probando
+POSTGRES_DB=test_larnu
+POSTGRES_PORT=5432
