--- a/package.json
+++ b/package.json
@@ -17,17 +17,20 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
-    "chai": "^4.3.6",
     "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "helmet": "^6.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "pg": "^8.8.0",
+    "sequelize": "^6.23.0"
+  },
+  "devDependencies": {
+    "chai": "^4.3.6",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.2",
-    "express": "^4.18.1",
-    "jsonwebtoken": "^8.5.1",
+    "install": "^0.13.0",
     "mocha": "^10.0.0",
-    "nodemon": "^2.0.19",
-    "pg": "^8.8.0",
-    "puppeteer": "^18.0.5",
-    "sequelize": "^6.23.0",
+    "nodemon": "^2.0.20",
     "sequelize-cli": "^6.4.1",
     "supertest": "^6.2.4"
   }
