--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.8.0",
-    "sequelize": "^6.23.0"
+    "sequelize": "^6.23.0",
+    "dotenv": "^16.0.2"
   },
   "devDependencies": {
     "chai": "^4.3.6",
