--- a/package.json
+++ b/package.json
@@ -22,13 +22,12 @@
     "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.8.0",
-    "sequelize": "^6.23.0",
-    "dotenv": "^16.0.2"
+    "sequelize": "^6.23.0"
   },
   "devDependencies": {
     "chai": "^4.3.6",
     "cross-env": "^7.0.3",
-    "dotenv": "^16.0.2",
+    "dotenv": "^16.0.3",
     "install": "^0.13.0",
     "mocha": "^10.0.0",
     "nodemon": "^2.0.20",
