--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ DB_LINK=postgres://sefhiroth:Zp8oVzTa327L1RqnZY5XBP6zxLOdwurj@dpg-ccrkakirrk08u0
 DB_LINK_LOCAL=postgres://sefhiroth:Zp8oVzTa327L1RqnZY5XBP6zxLOdwurj@dpg-ccrkakirrk08u0m5egbg-a/larnudb
 ENV=development
 
-# PGDATABASE=railway
-# PGHOST=containers-us-west-64.railway.app
-# PGPASSWORD=AHBb6wcVeOCLYyIQqzQn
-# PGPORT=6923
-# PGUSER=postgres
+PGDATABASE=railway
+PGHOST=containers-us-west-64.railway.app
+PGPASSWORD=PfelA0eHvhYSAnPtUGpp
+PGPORT=6832
+PGUSER=postgres
 
 POSTGRES_USER=sefhiroth
 POSTGRES_PASSWORD=probando
